--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
   <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
 
   <link rel="stylesheet" href="assets/css/templatemo-softy-pinko.css">
-  </head>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
 
 
 <body>
@@ -27,6 +29,10 @@
 
     <script src="assets/js/custom.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
 </body>
 
 </html>
