--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>BookWorms</title>
+  <title>BookWorms</Span></title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="icon" href="favicon.ico" type="image/icon type">
