--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
     crossorigin="anonymous"></script>
 
-    <script src="assets/js/custom.js"></script>
+    <!-- <script src="assets/js/custom.js"></script> -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <script
   src="https://code.jquery.com/jquery-3.6.0.min.js"
