--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <title>BookWorms</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <link rel="icon" href="favicon.ico" type="image/icon type">
-  <!-- <link rel="icon" type="image/x-icon" href="favicon (1).ico"> -->
+  <!-- <link rel="icon" href="favicon.ico" type="image/icon type"> -->
+  <link rel="icon" type="image/x-icon" href="favicon1.ico">
   <!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -33,7 +33,7 @@
 
   <script src="https://js.stripe.com/v3/"></script>
   <script type="text/javascript">
-    var stripe = Stripe('pk_test_Vmvhpm2TASsGcgF4RcyQfkF000KwucQJR1'); // use your test publishable key
+    var stripe = Stripe('pk_test_51Ix4d6SFVvoENMxpUUB2FpA0LXrKUMpNHI4ndlsoXnPe2ZEl4hz8wAY1uC9Uk8pSozhcVtdYhAVBr4rN4tTiXudN00sc42FWJB'); // use your test publishable key
     var elements = stripe.elements();
   </script>
 </body>
