--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
   crossorigin="anonymous"></script>
 
+  <script src="https://kit.fontawesome.com/1ac0eec392.js" crossorigin="anonymous"></script>
   <script src="https://js.stripe.com/v3/"></script>
   <script type="text/javascript">
     var stripe = Stripe('pk_test_51Ix4d6SFVvoENMxpUUB2FpA0LXrKUMpNHI4ndlsoXnPe2ZEl4hz8wAY1uC9Uk8pSozhcVtdYhAVBr4rN4tTiXudN00sc42FWJB'); // use your test publishable key
