--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
   <title>BookWorms</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <!-- <link rel="icon" href="favicon.ico" type="image/icon type"> -->
-  <link rel="icon" type="image/x-icon" href="favicon1.ico">
+  <link rel="icon" href="favicon.ico" type="image/icon type">
   <!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
